Fix(S10P12A601-81): 설정 파일 수정

--- a/.gitignore
+++ b/.gitignore
@@ -185,6 +185,9 @@ WhereIsMyHome_Java.iml
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 .idea/**/azureSettings.xml
 
+# 설정 파일
+application.yml
+
 ### Java ###
 # Compiled class file
 *.class
