Feat(S10P12A601-29): OpenVidu controller and config basic code

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.open-in-view=false
+
+#OpenVidu
+#server.port= 5000
+#server.ssl.enabled= false
+OPENVIDU_URL= http://localhost:4443/
+OPENVIDU_SECRET= MY_SECRET
