--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -44,6 +44,12 @@ dependencies {
 
     //WebFlux
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+    //openvidu
+    implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.29.0'
+    //PostConstruct #TODO : 의존성 필요 없는 다른 어노테이션으로 조사 후 수정예정 - OpenViduContorller에 위치
+    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+
 }
 
 tasks.named('test') {
