--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.1'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'com.epages.restdocs-api-spec' version '0.17.1'
 }
 
 group = 'com.ssafy'
@@ -50,8 +51,43 @@ dependencies {
     //PostConstruct #TODO : 의존성 필요 없는 다른 어노테이션으로 조사 후 수정예정 - OpenViduContorller에 위치
     implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 
+
+    // h2
+    implementation 'com.h2database:h2'
+
+    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.17.1'
+    testImplementation 'com.epages:restdocs-api-spec-openapi3-generator:0.17.1'
+
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc:3.0.0'
+    testImplementation 'org.springframework.restdocs:spring-restdocs-webtestclient:3.0.0'
+}
+
+openapi3 {
+    servers = [
+            { url = 'http://localhost:8080' }
+    ]
+    title = 'ViewCareFull API'
+    description = 'ViewCareFull API Documentation'
+    version = '1.0.0'
+    format = 'yaml'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.register('copyOasToSwagger', Copy) {
+    delete("src/main/resources/static/swagger-ui/openapi3.yaml")
+    delete("build/resources/main/static/swagger-ui/openapi3.yaml")
+    from("build/api-spec/openapi3.yaml")
+    into("src/main/resources/static/swagger-ui/.")
+    into("build/resources/main/static/swagger-ui/.")
+    dependsOn("openapi3")
+    dependsOn("bootJar")
+    dependsOn("jar")
+}
+
+tasks.named('build') {
+    dependsOn("copyOasToSwagger")
 }
