--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -4,13 +4,12 @@
   "bracketSpacing": true,
   "semi": true,
   "experimentalTernaries": false,
-  "singleQuote": false,
+  "singleQuote": true,
   "jsxSingleQuote": false,
   "quoteProps": "as-needed",
   "trailingComma": "all",
   "singleAttributePerLine": false,
   "htmlWhitespaceSensitivity": "css",
-  "vueIndentScriptAndStyle": false,
   "proseWrap": "preserve",
   "insertPragma": false,
   "printWidth": 80,
