--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
-    "typescript": "^4.4.2",
+    "typescript": "^5.3.3",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.4.2",
     "workbox-broadcast-update": "^6.4.2",
@@ -64,8 +64,7 @@
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.56.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
