--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
@@ -60,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-js-pagination": "^3.0.7",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
