--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.10",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.2.48",
+    "@types/react-datepicker": "^4.19.5",
+    "@types/react-dom": "^18.2.18",
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.21.2",
