Test(S10P12A601-86):아이디 중복확인, 서비스단 회원가입 테스트코드

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -61,6 +61,9 @@ dependencies {
 
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc:3.0.0'
     testImplementation 'org.springframework.restdocs:spring-restdocs-webtestclient:3.0.0'
+
+    // mockito
+    testImplementation 'org.mockito:mockito-core:3.12.4'
 }
 
 openapi3 {
