--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -64,6 +64,11 @@ dependencies {
 
     // mockito
     testImplementation 'org.mockito:mockito-core:3.12.4'
+    // oauth2
+    implementation 'org.springframework.boot:spring-boot-configuration-processor'
+    //webClient
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
 }
 
 openapi3 {
