--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     //PostConstruct - InitializingBean afterPropertiesSet
     implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 
+    //gcp
+    implementation 'com.google.cloud:google-cloud-vision:3.31.0'
 
     // h2
     implementation 'com.h2database:h2'
