--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
     "@types/react": "^18.2.48",
     "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18.2.18",
+    "@types/react-js-pagination": "^3.0.7",
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
+    "openvidu-browser": "^2.29.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.25.0",
@@ -62,8 +65,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-js-pagination": "^3.0.7",
-    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.56.0",
