--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.34",
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
+    "html2canvas": "^1.4.1",
     "openvidu-browser": "^2.29.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
