Fix(S10P12A601-296): base64 to multipartfile convert

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     //gcp
     implementation 'com.google.cloud:google-cloud-vision:3.31.0'
 
+    //FileUtils - base64 To File
+    implementation 'commons-io:commons-io:2.11.0'
+
     // h2
     implementation 'com.h2database:h2'
 
