Feat(S10P12A601-305) : swagger CORS 해결

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -79,7 +79,9 @@ dependencies {
 
 openapi3 {
     servers = [
-            { url = 'http://localhost:8080' }
+            { url = 'http://localhost:8080' },
+            { url = 'https://i10a601.p.ssafy.io:8091/api' },
+            { url = 'https://i10a601.p.ssafy.io:8090/api' }
     ]
     title = 'ViewCareFull API'
     description = 'ViewCareFull API Documentation'
