Feat(S10P12A601-263) : mainpage 테스트 코드

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -80,8 +80,8 @@ dependencies {
 openapi3 {
     servers = [
             { url = 'http://localhost:8080' },
-            { url = 'https://i10a601.p.ssafy.io:8091/api' },
-            { url = 'https://i10a601.p.ssafy.io:8090/api' }
+            { url = 'http://i10a601.p.ssafy.io:8081' },
+            { url = 'http://i10a601.p.ssafy.io:8080' },
     ]
     title = 'ViewCareFull API'
     description = 'ViewCareFull API Documentation'
