Feat(S10P12A601-319) : Build 에러 해결 2

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,14 +8,11 @@ COPY ${JAR_FILE} app.jar
 COPY build/resources/main/static /app/static
 COPY build/api-spec /app/api-spec
 
-USER root
-# ffmpeg 설치를 위한 명령어
-# 패키지 목록 업데이트 및 필수 패키지 설치
-RUN apt-get update \
-    && apt-get install -y ffmpeg \
-    # 의존성이 있는 다른 패키지들을 설치하지 않도록 권장하는 옵션을 추가할 수 있습니다.
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+
+# ffmpeg 정적 바이너리 다운로드 및 설치
+ADD https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz /ffmpeg.tar.xz
+RUN tar xvf /ffmpeg.tar.xz --strip-components=1 -C /usr/local/bin
+RUN chmod +x /usr/local/bin/ffmpeg
 
 # Java 애플리케이션 실행
 ENTRYPOINT ["java","-jar","/app.jar"]
