Feat(S10P12A601-347) : Monthly Movie fadeinout 적용 테스트

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -74,7 +74,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
     //webClient
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-
+    // thumbnailator
+    implementation 'net.coobird:thumbnailator:0.4.20'
 }
 
 openapi3 {
