--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,14 @@
     "@types/react-dom": "^18.2.18",
     "@types/react-js-pagination": "^3.0.7",
     "@types/styled-components": "^5.1.34",
+    "@visx/axis": "^3.8.0",
+    "@visx/grid": "^3.5.0",
+    "@visx/group": "^3.3.0",
+    "@visx/legend": "^3.5.0",
+    "@visx/responsive": "^3.3.0",
+    "@visx/scale": "^3.5.0",
+    "@visx/shape": "^3.5.0",
+    "@visx/visx": "^3.8.0",
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "html2canvas": "^1.4.1",
