--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,9 @@
     "@visx/visx": "^3.8.0",
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
+    "date-fns": "^3.3.1",
     "html2canvas": "^1.4.1",
+    "lodash": "^4.17.21",
     "openvidu-browser": "^2.29.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
