--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-js-pagination": "^3.0.7",
     "@types/styled-components": "^5.1.34",
     "@visx/axis": "^3.8.0",
+    "@visx/glyph": "^3.3.0",
     "@visx/grid": "^3.5.0",
     "@visx/group": "^3.3.0",
     "@visx/legend": "^3.5.0",
@@ -22,14 +23,13 @@
     "@visx/scale": "^3.5.0",
     "@visx/shape": "^3.5.0",
     "@visx/visx": "^3.8.0",
+    "@visx/xychart": "^3.8.0",
     "axios": "^1.6.5",
-    "chart.js": "^4.4.1",
     "date-fns": "^3.3.1",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "openvidu-browser": "^2.29.1",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
